<resources>
    <string name="app_name">Ev3Control</string>
    <string name="touch_button">Touch Button!</string>
    <string name="action_settings">Settings</string>
    <string name="wait_till_bt_on">Bluetoothを有効にします</string>
    <string name="bt_needs_to_be_enabled">Bluetoothを有効にする必要があります</string>
    <string name="problem_at_connecting">Bluetoothが接続を開始できません</string>
    <string name="select_device">デバイスを選択</string>
    <string name="title_paired_devices">接続履歴のあるEV3</string>
    <string name="title_other_devices">その他のデバイス</string>
    <string name="button_scan">デバイスをスキャン</string>
    <string name="none_paired">接続履歴のある機器はありません</string>
    <string name="none_found">デバイスが見つかりません</string>
    <string name="scanning">スキャン中</string>
    <string name="connecting_please_wait">接続中です \nしばらくお待ちください</string>
    <string name="pairing_message">ペアリングしてから，接続してください</string>
    <string name="current_position">現在位置:</string>
    <string name="no_paired_ev3">ペアリングされたEV3がありません</string>
    <string name="bt_error_dialog_title">Bluetoothエラー</string>
    <string name="bt_error_dialog_message">ロボットに接続できません</string>
    <string name="problem_at_closing">接続を閉じるときに問題が発生しました</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="quit">Quit</string>
    <string name="connected">接続しました</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="motorACon">Motor AC Forward</string>
    <string name="motorACback">Motor AC Backward</string>
    <string name="motorACoff">Motor AC Stop</string>
    <string name="motorAon">Motor A On</string>
    <string name="motorAoff">Motor A Off</string>
    <string name="motorCon">Motor C On</string>
    <string name="motorCoff">Motor C Off</string>
    <string name="speed">Speed(%)</string>
    <string name="rotatebydegree">Rotate by degree</string>
    <string name="rotatebytime">Rotate by time</string>
    <string name="degree">Rotation</string>
    <string name="time">Time(Sec)</string>
    <string name="readColorSensor">Read Color Sensor</string>
    <string name="readTouchSensor">Read Touch Sensor</string>
    <string name="readUltrasonicSensor">Read USonic Sensor</string>

</resources>
